# multi-agent-stock-trading

./: .env  .gitignore  LICENSE  README.md  basic-chatbot-agent.py  ingest-algo-strategies.py  langgraph.json  list-chroma-documents.py  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
agents/: market_data_agent.py  portfolio_management_agent.py  simulated_data.py  strategy_agent.py  trading_logic_agent.py  user_interface_agent.py
